fix: fixed logic of address provider registration

--- a/package.json
+++ b/package.json
@@ -40,11 +40,16 @@
     "test:main:check-list": "MAINNET_FORK=true TS_NODE_TRANSPILE_ONLY=1 hardhat test  test-suites/test-aave/__setup.spec.ts test-suites/test-aave/mainnet/check-list.spec.ts",
     "dev:coverage": "buidler compile --force && buidler coverage --network coverage",
     "aave:evm:dev:migration": "npm run compile && hardhat aave:dev",
-    "aave:docker:full:migration": "npm run compile && npm run hardhat:docker -- aave:mainnet",
-    "aave:kovan:full:migration": "npm run compile && npm run hardhat:kovan -- aave:mainnet",
-    "matic:mumbai:full:migration": "npm run compile && npm run hardhat:mumbai matic:mainnet",
-    "matic:matic:full:migration": "npm run compile && npm run hardhat:matic matic:mainnet",
-    "amm:kovan:full:migration": "npm run compile && npm run hardhat:kovan -- amm:mainnet",
+    "aave:docker:full:migration": "npm run compile && npm run hardhat:docker -- aave:mainnet --skip-registry",
+    "aave:kovan:full:migration": "npm run compile && npm run hardhat:kovan -- aave:mainnet --skip-registry",
+    "matic:mumbai:full:migration": "npm run compile && npm run hardhat:mumbai matic:mainnet --skip-registry",
+    "matic:matic:full:migration": "npm run compile && npm run hardhat:matic matic:mainnet --skip-registry",
+    "amm:kovan:full:migration": "npm run compile && npm run hardhat:kovan -- amm:mainnet --skip-registry",
+    "aave:docker:full:migration:add-registry": "npm run compile && npm run hardhat:docker -- aave:mainnet",
+    "aave:kovan:full:migration:add-registry": "npm run compile && npm run hardhat:kovan -- aave:mainnet",
+    "matic:mumbai:full:migration:add-registry": "npm run compile && npm run hardhat:mumbai matic:mainnet",
+    "matic:matic:full:migration:add-registry": "npm run compile && npm run hardhat:matic matic:mainnet",
+    "amm:kovan:full:migration:add-registry": "npm run compile && npm run hardhat:kovan -- amm:mainnet",
     "aave:docker:add-market-to-registry-from-config": "npm run compile && npm run hardhat:docker -- add-market-to-registry --pool Aave",
     "aave:kovan:add-market-to-registry-from-config": "npm run compile && npm run hardhat:kovan -- add-market-to-registry --pool Aave",
     "matic:mumbai:add-market-to-registry-from-config": "npm run compile && npm run hardhat:mumbai add-market-to-registry --pool Matic",
