--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,14 @@ jobs:
         run: npm ci
       - name: Test
         run: npm run ci:test
+      - name: Dev deployment
+        run: npm run aave:evm:dev:migration
+      - name: Mainnet deployment at Mainnet fork
+        run: npm run aave:fork:main
+      - name: Amm deployment at Mainnet fork
+        run: npm run amm:fork:main
+      - name: Aave deployment at Kovan fork
+        run: npm run aave:fork:kovan
       # - name: Coverage
       #   run: npm run coverage
       # - uses: codecov/codecov-action@v1
