feat: Add defender-relay-client dependency

--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "chai": "4.2.0",
     "chai-bignumber": "3.0.0",
     "chai-bn": "^0.2.1",
+    "defender-relay-client": "^1.7.0",
     "dotenv": "^8.2.0",
     "eth-sig-util": "2.5.3",
     "ethereum-waffle": "3.0.2",
